backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: horse-racing
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 3001
      targetPort: 3001
