frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: horse-racing
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
