ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: horse-racing
  namespace: horse-racing
spec:
  rules:
    - host: race.tetherluck.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3001
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
